--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_map_cancellable_tile_provider: ^3.1.0
   datetime_picker_formfield: ^2.0.1
   intl: ^0.20.2
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
