--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,9 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_map_cancellable_tile_provider: ^3.1.0
   datetime_picker_formfield: ^2.0.1
-  intl: ^0.20.2
+  intl: ^0.19.0
   http: ^1.3.0
+  flutter_localization: ^0.3.2
 
 dev_dependencies:
   flutter_test:
